--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -82,9 +82,6 @@ a:hover {
     color: #a22;
     color: #000;
     background-color: #fff;
-    -webkit-box-shadow: 0px 0px 5px #aaa;
-    -moz-box-shadow: 0px 0px 5px #aaa;
-    box-shadow: 0px 0px 5px #aaa;
 }
 /* misc */
 #container {
@@ -107,6 +104,7 @@ a:hover {
     -webkit-box-shadow: inset 0px 0px 10px #888;
     -moz-box-shadow: inset 0px 0px 10px #888;
     box-shadow: inset 0px 0px 10px #888;
+    height: 50px;
     margin-top: 10px;
 }
 #topnav, #topnav ul {
@@ -122,13 +120,18 @@ a:hover {
 #topnav li {
     float: left;
     width: 25%;
-    height: 50px;
     line-height: 50px;
     text-align: center;
 }
 #topnav li a {
     display: block;
     text-decoration: none;
+}
+#topnav a.active, #topnav a.active:hover,
+#topnav a:hover {
+    -webkit-box-shadow: 0px 0px 10px #aaa;
+    -moz-box-shadow: 0px 0px 10px #aaa;
+    box-shadow: 0px 0px 10px #aaa;
 }
 
 /**************************
