--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -58,7 +58,6 @@ body {
     background-color: #eee;
     font-size: 0.8em;
 }
-
 a {
     text-decoration: none;
     color: #34f;
@@ -77,11 +76,11 @@ a:hover {
 }
 #topnav li {
 }
+#topnav .current_nav_page a, /* class for debugging, but useful in production */
 #topnav a.active, #topnav a.active:hover,
 #topnav a:hover {
-    color: #a22;
     color: #000;
-    background-color: #fff;
+    background-color: #eee;
 }
 /* misc */
 #container {
@@ -115,11 +114,13 @@ a:hover {
     display: none;
 }
 #topnav ul {
-    width: 100%;
+    width: 101.5%;
 }
 #topnav li {
     float: left;
-    width: 25%;
+    width: 16%;
+    margin-left: 4.3%;
+    margin-right: 4.3%;
     line-height: 50px;
     text-align: center;
 }
@@ -127,11 +128,14 @@ a:hover {
     display: block;
     text-decoration: none;
 }
+#topnav .current_nav_page a,
 #topnav a.active, #topnav a.active:hover,
 #topnav a:hover {
     -webkit-box-shadow: 0px 0px 10px #aaa;
     -moz-box-shadow: 0px 0px 10px #aaa;
     box-shadow: 0px 0px 10px #aaa;
+    margin-top: 5px;
+    line-height: 45px;
 }
 
 /**************************
