Spaced out the signup button slightly.

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -159,6 +159,7 @@ a:hover {
     clear: both;
     text-align: center;
     margin-top: 3.0em;
+    margin-bottom: 1.0em;
 }
 
 /**************************
