--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -190,20 +190,17 @@ a:hover {
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     border-radius: 50px;
-    -webkit-box-shadow: 0px 5px 30px #888;
-    -moz-box-shadow: 0px 5px 30px #888;
-    box-shadow: 0px 5px 30px #888;
-    color: #ddd;
-    background-color: #800;
+    -webkit-box-shadow: 0px 5px 20px #555;
+    -moz-box-shadow: 0px 5px 20px #555;
+    box-shadow: 0px 5px 20px #555;
+    color: #fff;
+    background-color: #a00;
 }
 .signup_text a:hover,
 .signup_text a.active,
 .signup_text a.active:hover {
     color: #fff;
-    background-color: #b22;
-    -webkit-box-shadow: inset 0px 5px 30px #701;
-    -moz-box-shadow: inset 0px 5px 30px #701;
-    box-shadow: inset 0px 5px 30px #701;
+    background-color: #c22;
 }
 
 /**************************
