--- a/views/splash.haml
+++ b/views/splash.haml
@@ -48,5 +48,7 @@
           %span#end_of_content_spacer.clear
       #footer
         %footer
-          Copyright and other info goes here
+          %a{:href => "about"} About this Site
+          (c) 2011
+          %a{:href => "authors"} junethack developers
     / end of container
