--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -9,7 +9,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 nav,
-table, caption, tbody, tfoot, thead, tr, th, td {
+table, caption, tbody, tfoot, thead, tr, th, td,
+input, label {
     margin: 0;
     padding: 0;
     border: 0;
@@ -40,13 +41,6 @@ table {
 h1, h2, h3, h4, h5, h6 {
     /*font-family: Georgia, Times, "Times New Roman", serif;*/
 }
-
-/************************
-**                     **
-**     form styles     **
-**                     **
-************************/
-
 
 /**************************
 **                       **
@@ -242,6 +236,73 @@ a:hover {
     margin: 0 auto;
 }
 
+/**************************
+**                       **
+**      form styles      **
+**                       **
+**************************/
+/* add form#login_form (>) in front of each line and you're set */
+fieldset {
+    width: 400px;
+    margin: 0 auto;
+    /* to avoid margin collaspe with submit button below */
+    padding-bottom: 1px;
+}
+/* not needed
+fieldset > div {
+    overflow: hidden;
+}
+*/
+.form_msg,
+input,
+label {
+    margin-top: 5px;
+    margin-left: 10px;
+    display: block;
+    float: left;
+    height: 20px;
+    line-height: 20px;
+}
+label {
+    width: 120px;
+    clear: both;
+    text-align: right;
+}
+input {
+    padding: 1px;
+    width: 120px;
+    background-color: #fff;
+    border: 1px inset #eee;
+}
+.form_msg {
+    width: 120px;
+    color: red;
+    font-size: 85%;
+}
+input[type=submit] {
+    float: none;
+    margin: 0 auto;
+    margin-top: 20px;
+    border: 0;
+    height: 50px;
+    font-size: 1.4em;
+    text-decoration: none;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    -webkit-box-shadow: 0px 5px 20px #555;
+    -moz-box-shadow: 0px 5px 20px #555;
+    box-shadow: 0px 5px 20px #555;
+    color: #fff;
+    background-color: #a00;
+}
+input[type=submit]:hover,
+input[type=submit].active,
+input[type=submit].active:hover {
+    cursor: pointer;
+    color: #fff;
+    background-color: #c22;
+}
 /**************************
 **                       **
 **     footer styles     **
