change some headers

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -15,7 +15,7 @@
             %li.current_nav_page
               %a{:href => "#"} Home
             %li
-              %a{:href => "#"} Login
+              %a{:href => "/login"} Login
             %li
               %a{:href => "#"} Scoreboard
             %li
