--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -49,6 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 **************************/
 
 body {
+    overflow-y: scroll;
     background-color: #eee;
     font-size: 0.8em;
 }
