change some fields in game.rb to string so it stores correctly change static files in public/ to symlinks for easier updating (for now) update haml, add todo, add nohup output to gitignore

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -20,7 +20,7 @@
               %a{:href => "#"} Scoreboard
             %li
               %a{:href => "#"} Help
-          %span.clear       
+          %span.clear
       .hcenter
         %p
           %img{:alt => "Logo", :src => "banner_at2.png"}/
@@ -29,7 +29,7 @@
           %p
             %a{:href => "register"} Sign up now!
         .text_content_wrapper
-          #top_post.text_content
+          .text_content
             %h2
               News item or welcome note
             %p
@@ -40,7 +40,7 @@
               looks like.
             %p
               Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
-          .text_content
+          .text_content.non_top_post
             %h2
               Optional news item 2, demonstrates divider image
             %p
