--- a/public/style-xiella.css
+++ b/public/style-xiella.css
@@ -1,274 +1,1 @@
-/* MEYER RESET
-http://meyerweb.com/eric/tools/css/reset/ */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-nav,
-table, caption, tbody, tfoot, thead, tr, th, td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
-body {
-    line-height: 1;
-    font-family: Arial, sans-serif;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after, q:before, q:after {
-    content: '';
-    content: none;
-}
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-h1, h2, h3, h4, h5, h6 {
-    /*font-family: Georgia, Times, "Times New Roman", serif;*/
-}
-
-/************************
-**                     **
-**     form styles     **
-**                     **
-************************/
-
-
-/**************************
-**                       **
-**     project styles    **
-**                       **
-**************************/
-
-body {
-    background-color: #eee;
-    font-size: 0.8em;
-}
-a {
-    text-decoration: none;
-    color: #34f;
-}
-a.active, a.active:hover,
-a:hover {
-    color: #800;
-    text-decoration: underline;
-}
-/* topnav */
-.text_content_wrapper, #topnav {
-    background-color: #ddd;
-}
-#topnav li a {
-    color: #555;
-}
-#topnav li {
-}
-#topnav .current_nav_page a, /* class for debugging, but useful in production */
-#topnav a.active, #topnav a.active:hover,
-#topnav a:hover {
-    color: #000;
-    background-color: #eee;
-}
-/* misc */
-#container {
-    width: 750px;
-    margin: 0 auto;
-}
-
-/**************************
-**                       **
-**       Navigation      **
-**                       **
-**************************/
-
-/*
- * Using #topnav not .navigation because of possible 2ndary navigation at a later date, and don't want topnav styles to apply there as well
- * */
-#topnav {
-    width: 100%;
-    margin: 0 auto;
-    -webkit-box-shadow: inset 0px 0px 10px #888;
-    -moz-box-shadow: inset 0px 0px 10px #888;
-    box-shadow: inset 0px 0px 10px #888;
-    /*
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    */
-    height: 50px;
-    margin-top: 10px;
-}
-#topnav, #topnav ul {
-    /* because of ie's amazing expanding box trick */
-    overflow: hidden;
-}
-#topnav h1 {
-    display: none;
-}
-#topnav ul {
-    width: 101.5%;
-}
-#topnav li {
-    float: left;
-    width: 16%;
-    margin-left: 4.3%;
-    margin-right: 4.3%;
-    line-height: 50px;
-    text-align: center;
-}
-#topnav li a {
-    display: block;
-    text-decoration: none;
-}
-#topnav .current_nav_page a,
-#topnav a.active, #topnav a.active:hover,
-#topnav a:hover {
-    -webkit-border-top-left-radius: 4px;
-    -webkit-border-top-right-radius: 4px;
-    -moz-border-radius-topleft: 4px;
-    -moz-border-radius-topright: 4px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    -webkit-box-shadow: 0px 0px 10px #aaa;
-    -moz-box-shadow: 0px 0px 10px #aaa;
-    box-shadow: 0px 0px 10px #aaa;
-    margin-top: 5px;
-    line-height: 45px;
-}
-
-/**************************
-**                       **
-**      title styles     **
-**                       **
-**************************/
-
-.hcenter {
-    clear: both;
-    text-align: center;
-    /* space between nav and title */
-    margin-top: 2.5em;
-}
-
-/**************************
-**                       **
-**     signup styles     **
-**                       **
-**************************/
-
-/* space between title and rest of content */
-.content_bulk {
-    margin-top: 0em;
-}
-
-.signup_text {
-    text-align: center;
-    width: 170px;
-    margin: 0 auto;
-}
-.signup_text p {
-    height: 60px;
-    line-height: 60px;
-}
-.signup_text a {
-    font-size: 1.4em;
-    display: block;
-    display: block;
-    text-decoration: none;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-    -webkit-box-shadow: 0px 5px 20px #555;
-    -moz-box-shadow: 0px 5px 20px #555;
-    box-shadow: 0px 5px 20px #555;
-    color: #fff;
-    background-color: #a00;
-}
-.signup_text a:hover,
-.signup_text a.active,
-.signup_text a.active:hover {
-    color: #fff;
-    background-color: #c22;
-}
-
-/**************************
-**                       **
-**    body text styles   **
-**                       **
-**************************/
-
-.text_content_wrapper {
-    /* space between the main content and the element before - eg signup button */
-    margin-top: 3.0em;
-    padding-top: 1px;
-    -webkit-box-shadow: inset 0px 0px 10px #888;
-    -moz-box-shadow: inset 0px 0px 10px #888;
-    box-shadow: inset 0px 0px 10px #888;
-}
-.text_content {
-    margin: 0 30px;
-    line-height: 1.5em;
-}
-.text_content p {
-    margin-bottom: 10px;
-}
-.text_content h2 {
-    font-size: 150%;
-    line-height: 1.5em;
-    margin-bottom: 10px;
-}
-/* for iOS safari */
-.text_content#top_post h2,
-.text_content:first-child h2 {
-    margin-top: 35px;
-}
-.text_content:before {
-    content: url(divider.png);
-    width: 114px;
-    display: block;
-    margin: 0 auto;
-}
-/* for iOS safari */
-.text_content#top_post:before,
-.text_content:first-child:before {
-    content: '';
-}
-
-/**************************
-**                       **
-**     footer styles     **
-**                       **
-**************************/
-
-#footer {
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    margin: 20px 0;
-}
-
-/**************************
-**                       **
-**     helper styles     **
-**                       **
-**************************/
-
-.clear {
-    display: block;
-    clear: both;
-}
-#end_of_content_spacer {
-    height: 30px;
-}
+../webmocks/alt_design2/style-xiella.css
