Add cheesy introductory text.

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -37,20 +37,27 @@
         .text_content_wrapper
           .text_content
             %h2
-              News item or welcome note
+              Welcome to the NetHack July tournament site!
             %p
-              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
+              Are you ready to embark the Dungeons of Doom? To kill all your
+              enemies and EAT their corpses? Collect all the treasures the
+              earth has to offer? Ready to challenge the mightiest
+              demons of Gehennom and battle the mighty Wizard of Yendor?
+              BADASS enough to travel Heavens themselves while kicking
+              angels in the face?
             %p
-              This is what
-              %a{:href => "#"} a normal link
-              looks like.
+              Play NetHack.
             %p
-              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
+              Play in the NetHack July tournament.
+            %p
           .text_content.non_top_post
             %h2
-              Optional news item 2, demonstrates divider image
+              Huh?
             %p
-              Consectetur adipiscing elit. Pellentesque nec odio eget leo sollicitudin aliquam. Cras vestibulum aliquam eros, sit amet posuere massa cursus vel. Maecenas scelerisque nisi at tellus semper ullamcorper. Fusce in leo velit, sit amet hendrerit lacus. Curabitur venenatis auctor augue. Proin purus augue, tristique tempor venenatis vel, tempus quis diam. In non nisl lacus. Quisque lobortis, felis a fermentum bibendum, lectus felis iaculis massa, in adipiscing nunc risus non enim.
+              What's 
+              %a{:href => "http://en.wikipedia.org/wiki/NetHack"} NetHack?
+              What's
+              %a{:href => "#"} this all about?
           %span#end_of_content_spacer.clear
       #footer
         %footer
