Add a small margin between the logo image and button.

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -155,6 +155,7 @@ a:hover {
     text-align: center;
     /* space between nav and title */
     margin-top: 2.5em;
+    margin-bottom: 1em;
 }
 
 /**************************
