Fix "Heavens" - "the Heavens"

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -43,7 +43,7 @@
               enemies and EAT their corpses? Collect all the treasures the
               earth has to offer? Ready to challenge the mightiest
               demons of Gehennom and battle the mighty Wizard of Yendor?
-              BADASS enough to travel Heavens themselves while kicking
+              BADASS enough to travel the Heavens themselves while kicking
               angels in the face?
             %p
               Play NetHack.
