Make a jpg of the background image and use that instead of the png.

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     overflow-y: scroll;
     background-color: #eee;
-    background-image: url('background.png');
+    background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-position: top center;
     font-size: 0.8em;
