Update texts July -> Summer

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -37,7 +37,7 @@
         .text_content_wrapper
           .text_content
             %h2
-              Welcome to the NetHack July tournament site!
+              Welcome to the NetHack Summer tournament site!
             %p
               Are you ready to embark the Dungeons of Doom? To kill all your
               enemies and EAT their corpses? Collect all the treasures the
@@ -46,9 +46,9 @@
               BADASS enough to travel the Heavens themselves while kicking
               angels in the face?
             %p
-              Play NetHack.
+              Then play NetHack.
             %p
-              Play in the NetHack July tournament.
+              And also play in the NetHack Summer tournament.
             %p
           .text_content.non_top_post
             %h2
