Tell on the front page when the tournament starts and when it ends.

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -58,6 +58,9 @@
               %a{:href => "http://en.wikipedia.org/wiki/NetHack"} NetHack?
               What's
               %a{:href => "#"} this all about?
+            %p
+              The tournament starts July 16th at UTC midnight and runs until 
+              the end of August 14th.
           %span#end_of_content_spacer.clear
       #footer
         %footer
