--- a/views/home.haml
+++ b/views/home.haml
@@ -1,31 +1,34 @@
-#greeting
-	= "Hi " + @user.login
-%table#accountlist
-	%tr
-		%th
-			Server
-		%th	
-			Account
-	- for account in @user.accounts
-		%tr.account
-			
-			%td
-				= account.server.name
-			%td
-				= account.name
-%table#gamelist
-	%tr
-		%th
-			Name
-		%th
-			Server
-		%th
-			Death
-	- for game in @games
-		%tr.game
-			%td
-				= game.name
-			%td
-				= game.server.name
-			%td
-				= game.death
+.content_bulk
+    .text_content_wrapper
+        .text_content
+            #greeting
+                = "Hi " + @user.login
+            %table#accountlist
+                %tr
+                    %th
+                        Server
+                    %th	
+                        Account
+                - for account in @user.accounts
+                    %tr.account
+                        
+                        %td
+                            = account.server.name
+                        %td
+                            = account.name
+            %table#gamelist
+                %tr
+                    %th
+                        Name
+                    %th
+                        Server
+                    %th
+                        Death
+                - for game in @games
+                    %tr.game
+                        %td
+                            = game.name
+                        %td
+                            = game.server.name
+                        %td
+                            = game.death
