--- a/views/splash.haml
+++ b/views/splash.haml
@@ -1,70 +1,38 @@
-<!doctype html>
-%html
-  %head
-    %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
-    %link{:href => "style-xiella.css", :rel => "stylesheet", :type => "text/css"}/
-    %title Junethack
-  %body
-    #messages
-      - for message in @messages
-        %div.message= message
-    #errors
-      - for error in @errors
-        %div.error= error
-    #container
-      #topnav.navigation
-        %nav
-          / use of the nav element: http://www.webteacher.ws/2009/07/09/html5-the-nav-element
-          %h1
-            Navigation
-          %ul
-            %li.current_nav_page
-              %a{:href => "#"} Home
-            %li
-              %a{:href => "/login"} Login
-            %li
-              %a{:href => "#"} Scoreboard
-            %li
-              %a{:href => "#"} Help
-          %span.clear
-      .hcenter
-        %p
-          %img{:alt => "Logo", :src => "banner_at2.png"}/
-      .content_bulk
-        .signup_text
-          %p
-            %a{:href => "register"} Sign up now!
-        .text_content_wrapper
-          .text_content
-            %h2
-              Welcome to the NetHack Summer tournament site!
-            %p
-              Are you ready to embark the Dungeons of Doom? To kill all your
-              enemies and EAT their corpses? Collect all the treasures the
-              earth has to offer? Ready to challenge the mightiest
-              demons of Gehennom and battle the mighty Wizard of Yendor?
-              BADASS enough to travel the Heavens themselves while kicking
-              angels in the face?
-            %p
-              Then play NetHack.
-            %p
-              And also play in the NetHack Summer tournament.
-            %p
-          .text_content.non_top_post
-            %h2
-              Huh?
-            %p
-              What's 
-              %a{:href => "http://en.wikipedia.org/wiki/NetHack"} NetHack?
-              What's
-              %a{:href => "#"} this all about?
-            %p
-              The tournament starts July 16th at UTC midnight and runs until 
-              the end of August 14th.
-          %span#end_of_content_spacer.clear
-      #footer
-        %footer
-          %a{:href => "about"} About this Site
-          (c) 2011
-          %a{:href => "authors"} junethack developers
-    / end of container
+.content_bulk
+  .signup_text
+    %p
+      %a{:href => "register"} Sign up now!
+  .text_content_wrapper
+    .text_content
+      %h2
+        Welcome to the NetHack Summer tournament site!
+      %p
+        Are you ready to embark the Dungeons of Doom? To kill all your
+        enemies and EAT their corpses? Collect all the treasures the
+        earth has to offer? Ready to challenge the mightiest
+        demons of Gehennom and battle the mighty Wizard of Yendor?
+        BADASS enough to travel the Heavens themselves while kicking
+        angels in the face?
+      %p
+        Then play NetHack.
+      %p
+        And also play in the NetHack Summer tournament.
+      %p
+    .text_content.non_top_post
+      %h2
+        Huh?
+      %p
+        What's 
+        %a{:href => "http://en.wikipedia.org/wiki/NetHack"} NetHack?
+        What's
+        %a{:href => "about"} this all about?
+      %p
+        The tournament starts July 16th at UTC midnight and runs until 
+        the end of August 14th.
+    %span#end_of_content_spacer.clear
+#footer
+  %footer
+    %a{:href => "about"} About this Site
+    (c) 2011
+    %a{:href => "authors"} junethack developers
+/ end of container
