--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,7 +13,7 @@
             Navigation
           %ul
             %li.current_nav_page
-              %a{:href => "#"} Home
+              %a{:href => "/"} Home
             %li
               %a{:href => "/login"} Login
             %li
