Use / at start of style and image links so that they show up when visiting pages that are not top level.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
-    %link{:href => "style-xiella.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "/style-xiella.css", :rel => "stylesheet", :type => "text/css"}/
     %title Junethack
   %body
     #container
@@ -23,7 +23,7 @@
           %span.clear
       .hcenter
         %p
-          %img{:alt => "Logo", :src => "banner_at2.png"}/
+          %img{:alt => "Logo", :src => "/banner_at2.png"}/
       - if !@messages.empty? then
         #messages
           %div
