Add "most ascensions" to the scoreboard.
This involves a bunch of changes I'm too bored to list blah blah sue me.

--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -1,9 +1,8 @@
 .content_bulk
   .text_content_wrapper
     .text_content
-      %h2
-        Scores for player
-        =@username + "."
+      %h1
+        Scoreboard
       =haml :generic_scores
     %span#end_of_content_spacer.clear
 / end of container
