--- a/views/generic_scores.haml
+++ b/views/generic_scores.haml
@@ -32,3 +32,18 @@
         %tr{:id => style}
           %td= username
           %td= ascensions
+.text_content.non_top_post
+  %h3 
+    Highest sustained ascension rate
+  .scorelisting
+    %table
+      %tr
+        %th Name 
+        %th Rate
+      - count = 0
+      - @highest_density_users.each do |username, ascensions|
+        - style = (count % 2) == 0 ? "cell1" : "cell2"
+        - count += 1
+        %tr{:id => style}
+          %td= username
+          %td= ascensions
