Link to scoreboard from layout.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,7 +17,7 @@
             %li
               %a{:href => "/login"} Login
             %li
-              %a{:href => "#"} Scoreboard
+              %a{:href => "/scoreboard"} Scoreboard
             %li
               %a{:href => "#"} Help
           %span.clear
