Navigation changes, fix the .gitignore

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -2,3 +2,8 @@
   %footer
     This site (c) 2011
     %a{:href => "about"} Junethack developers.
+    [
+    %a{:href => "about"} About 
+    \-
+    %a{:href => "rules"} Rules
+    ]
