--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,7 +23,7 @@
             %li
               %a{:href => "/scoreboard"} Scoreboard
             %li
-              %a{:href => "#"} Logout
+              %a{:href => "/logout"} Logout
           %span.clear
       .hcenter
         %p
