--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -281,27 +281,37 @@ a:hover {
 
 /* TABLES */
 /* Now this one is for score listing */
+.scorelisting
+{
+    text-align: center;
+}
+
 .scorelisting table
 {
+    font-size: 85%;
     border-width: 2px;
     border-style: solid;
     border-color: gray;
     border-collapse: collapse;
     /* Hard limit on width */
-    width: 480px;
+    width: 600px;
+    text-align: left;
 }
 .scorelisting th
 {
     text-align: left;
     padding-right: 20px;
+    padding-left: 5px;
 }
 #cell1 td
 {
+    text-align: left;
     background-color: #ccc;
     border-width: 1px;
     border-style: solid;
     border-color: black;
     padding-right: 10px;
+    padding-left: 5px;
 }
 #cell2 td
 {
@@ -309,6 +319,7 @@ a:hover {
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    padding-left: 5px;
 }
 
 /**************************
