--- a/views/generic_scores.haml
+++ b/views/generic_scores.haml
@@ -26,12 +26,12 @@
         %th Name 
         %th Ascensions
       - count = 0
-      - @most_ascended_users.each do |username, ascensions|
+      - @most_ascended_users.each do |u|
         - style = (count % 2) == 0 ? "cell1" : "cell2"
         - count += 1
         %tr{:id => style}
-          %td= username
-          %td= ascensions
+          %td= u.name
+          %td= u.ascensions
 .text_content.non_top_post
   %h3 
     Highest sustained ascension rate
