--- a/views/generic_scores.haml
+++ b/views/generic_scores.haml
@@ -40,14 +40,10 @@
       %tr
         %th Name 
         %th Rate
-        %th Game 1
-        %th Game 2
       - count = 0
       - @highest_density_users.each do |username, info|
         - style = (count % 2) == 0 ? "cell1" : "cell2"
         - count += 1
         %tr{:id => style}
           %td= username
-          %td= info[:score]
-          %td= info[:game1]
-          %td= info[:game2]
+          %td= info
