--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -2,16 +2,15 @@
   %h3
     Competition
   - variants = @userscore.variants
-  - @userscore.variants.each_key do |variant|
-    %h4= variant
-    - server_ids = variants[variant]
-    %p= "Most ascensions: #{@userscore.most_ascensions server_ids}"
-    %p= "Longest ascension streak: #{@userscore.longest_ascension_streak server_ids}"
-    %p= "Fastest ascension (gametime): #{(@userscore.fastest_ascension_gametime server_ids)}"
-    %p= "Fastest ascension (realtime): #{(@userscore.fastest_ascension_realtime server_ids)}"
-    %p= "Highest scoring ascension: #{@userscore.highest_scoring_ascension server_ids}"
-    %p= "Lowest scoring ascension: #{@userscore.lowest_scoring_ascension server_ids}"
-    %p= "Most conducts in a single ascension: #{@userscore.most_conducts_ascension server_ids}"
+  - @userscore.variants.each do |variant, variant_name|
+    %h4= variant_name
+    %p= "Most ascensions: #{@userscore.most_ascensions variant}"
+    %p= "Longest ascension streak: #{@userscore.longest_ascension_streak variant}"
+    %p= "Fastest ascension (gametime): #{(@userscore.fastest_ascension_gametime variant)}"
+    %p= "Fastest ascension (realtime): #{(@userscore.fastest_ascension_realtime variant)}"
+    %p= "Highest scoring ascension: #{@userscore.highest_scoring_ascension variant}"
+    %p= "Lowest scoring ascension: #{@userscore.lowest_scoring_ascension variant}"
+    %p= "Most conducts in a single ascension: #{@userscore.most_conducts_ascension variant}"
 
 .text_content.non_top_post
   %h3
