new model scoreboard, writing competition/trophies into own table

--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -3,6 +3,8 @@
     .text_content
       %h1
         Scoreboard
+      %h2
+      =haml :_trophy_scores
       =haml :generic_scores
     %span#end_of_content_spacer.clear
 / end of container
