non breakable space for dates and padding in .table_date and .table_number

--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -30,4 +30,4 @@
           %td= game.name
           %td.table_number= game.points
           %td= game.death
-          %td.table_date= Time.at(game.endtime.to_i).getutc.strftime("%Y-%m-%d %H:%M")
+          %td.table_date= Time.at(game.endtime.to_i).getutc.strftime("%Y-%m-%d&nbsp;%H:%M")
