--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,7 +17,7 @@
                 %img{:alt => "Logo", :src => "/divider.png"}/
             %li
               - if !@logged_in then
-                %a{:href => "/home"} #{@user.login}
+                %a{:href => "/home"} #{h @user.login}
               - if @logged_in then
                 %a{:href => "/login"} Login
             %li
