--- a/views/user_scores.haml
+++ b/views/user_scores.haml
@@ -3,7 +3,7 @@
     .text_content
       %h2
         Scores for player
-        =@username + "."
+        = h @username + "."
       =haml :generic_scores
     %span#end_of_content_spacer.clear
 / end of container
