--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -27,7 +27,7 @@
         - style = (count % 2) == 0 ? "cell1" : "cell2"
         - count += 1
         %tr{:id => style}
-          %td= game.name
+          %td= h game.name
           %td.table_number= game.points
-          %td= game.death
+          %td= h game.death
           %td.table_date= Time.at(game.endtime.to_i).getutc.strftime("%Y-%m-%d&nbsp;%H:%M")
