--- a/views/generic_scores.haml
+++ b/views/generic_scores.haml
@@ -13,9 +13,9 @@
         - style = (count % 2) == 0 ? "cell1" : "cell2"
         - count += 1
         %tr{:id => style}
-          %td= game.name
+          %td= h game.name
           %td= game.points
-          %td= game.death
+          %td= h game.death
           %td= Time.at(game.endtime.to_i).getutc.strftime("%m/%d %H:%M")
 .text_content.non_top_post
   %h3 
@@ -30,7 +30,7 @@
         - style = (count % 2) == 0 ? "cell1" : "cell2"
         - count += 1
         %tr{:id => style}
-          %td= u.name
+          %td= h u.name
           %td= u.ascensions
 .text_content.non_top_post
   %h3 
@@ -45,5 +45,5 @@
         - style = (count % 2) == 0 ? "cell1" : "cell2"
         - count += 1
         %tr{:id => style}
-          %td= username
-          %td= info
+          %td= h username
+          %td= h info
