--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -1,16 +1,34 @@
 .text_content.non_top_post
   %h3
     Competition
-  - variants = @userscore.variants
   - @userscore.variants.each do |variant, variant_name|
     %h4= variant_name
-    %p= "Most ascensions: #{@userscore.most_ascensions variant}"
-    %p= "Longest ascension streak: #{@userscore.longest_ascension_streak variant}"
-    %p= "Fastest ascension (gametime): #{(@userscore.fastest_ascension_gametime variant)}"
-    %p= "Fastest ascension (realtime): #{(@userscore.fastest_ascension_realtime variant)}"
-    %p= "Highest scoring ascension: #{@userscore.highest_scoring_ascension variant}"
-    %p= "Lowest scoring ascension: #{@userscore.lowest_scoring_ascension variant}"
-    %p= "Most conducts in a single ascension: #{@userscore.most_conducts_ascension variant}"
+    .scorelisting
+      %table
+        %tr
+          %th Competition
+          %th
+        %tr#cell1
+          %td Most ascensions
+          %td.table_number= h @userscore.most_ascensions variant
+        %tr#cell2
+          %td Fastest ascension (gametime)
+          %td.table_number= h @userscore.fastest_ascension_gametime variant
+        %tr#cell1
+          %td Fastest ascension (realtime)
+          %td.table_number= h @userscore.fastest_ascension_realtime variant
+        %tr#cell2
+          %td Highest scoring ascension
+          %td.table_number= h @userscore.highest_scoring_ascension variant
+        %tr#cell1
+          %td Lowest scoring ascension
+          %td.table_number= h @userscore.lowest_scoring_ascension variant
+        %tr#cell2
+          %td Most conducts in a single ascension
+          %td.table_number= h @userscore.most_ascensions variant
+        %tr#cell1
+          %td Longest ascension streak
+          %td.table_number= h @userscore.longest_ascension_streak variant
 
 .text_content.non_top_post
   %h3
